# edz

./: .gitignore  CMakeLists.txt
data/: CMakeLists.txt
data/include/: data.hpp
data/src/: data.cpp
logic/: CMakeLists.txt
logic/include/: logic.hpp
logic/src/: logic.cpp
ui/: CMakeLists.txt
ui/src/: MainWindow.cpp  MainWindow.h  main.cpp
